--- a/css/styles.css
+++ b/css/styles.css
@@ -244,10 +244,36 @@ width, etc. */
 
 /* Media Query Tablet */
 /* --- */
-/* Replace this comment with your media query. */
-/* --- */
+@media (min-width: 900px) {
+  .card-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+  }
+  .product-card {
+    width: 45%;
+  }
+  .intro-text {
+    width: 45%;
+  }
+} /* --- */
 
 /* Media Query Desktop */
 /* --- */
-/* Replace this comment with your media query. */
+@media (min-width: 1200px) {
+  .card-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  .product-card {
+    width: 15%;
+  }
+  .intro-text {
+    width: 15%;
+  }
+}
 /* --- */
